examples/test/testpolicy14285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14285
  namespace: namespace124
spec:
  podSelector:
    matchLabels:
      key40: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value45
          key23: value43
      podSelector:
        matchLabels:
          key14: value48
          key43: value21
          key2: value34
